[metadata]
name = pkg
author = kiske
author_email = maike.704@gmail.com
description = Parvum service manager
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/parvum-lambda/pkg
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
install_requires =
    PyYAML==6.0
    requests==2.28.2
    semantic_version==2.10.0
